--- a/views/partial-signup.html
+++ b/views/partial-signup.html
@@ -3,23 +3,48 @@
   <form class="signup-form" action="/signup" method="POST">
     <label>
       First Name
-      <input type="text" aria-placeholder="First Name" name="first_name" />
+      <input
+        type="text"
+        aria-placeholder="First Name"
+        placeholder="First Name"
+        name="first_name"
+      />
     </label>
     <label>
       Last Name
-      <input type="text" aria-placeholder="Last Name" name="last_name" />
+      <input
+        type="text"
+        aria-placeholder="Last Name"
+        placeholder="Last Name"
+        name="last_name"
+      />
     </label>
     <label>
       Company
-      <input type="text" aria-placeholder="Company" name="company" />
+      <input
+        type="text"
+        aria-placeholder="Company"
+        placeholder="Company"
+        name="company"
+      />
     </label>
     <label>
       Email
-      <input type="text" aria-placeholder="Email" name="email" />
+      <input
+        type="text"
+        aria-placeholder="Email"
+        placeholder="Email"
+        name="email"
+      />
     </label>
     <label>
       Password
-      <input type="password" aria-placeholder="Password" name="password" />
+      <input
+        type="password"
+        aria-placeholder="Password"
+        placeholder="Placeholder"
+        name="password"
+      />
     </label>
     <label>
       <select class="signup-select" name="role">
@@ -27,6 +52,6 @@
         <option value="buyer">Buyer</option>
       </select>
     </label>
-    <button class="signupBTN" type="submit">Submit</button>
+    <button class="signupBTN" type="submit">Sign Up</button>
   </form>
 </div>
