--- a/views/template.html
+++ b/views/template.html
@@ -14,7 +14,7 @@
 <body class="has-navbar-fixed-top">
 <nav class="navbar is-transparent is-fixed-top">
   <div class="navbar-brand">
-    <a class="navbar-item" href="/">
+    <a class="navbar-item wine-icon" href="/">
       <img src="../images/DugkJmgi5C5SZfr4E9Wt0F6EQ.png" alt="Wine Bottle" width="38" height="28">
     </a> 
   </div>
